Added Project Settings file to git ignore.
Added Project Settings file to git ignore.

--- a/.gitignore
+++ b/.gitignore
@@ -65,3 +65,4 @@ crashlytics-build.properties
 Packages/packages-lock.json
 Packages/packages-lock.json
 Packages/packages-lock.json
+ProjectSettings/Packages/com.unity.probuilder/Settings.json
