Added Navmash to test area and expanded gitignore
Added Navmash to test area and expanded gitignore to include some annoying files.

--- a/.gitignore
+++ b/.gitignore
@@ -66,3 +66,6 @@ Packages/packages-lock.json
 Packages/packages-lock.json
 Packages/packages-lock.json
 ProjectSettings/Packages/com.unity.probuilder/Settings.json
+Assets/Plugins/FMOD/Cache/Editor/FMODStudioCache.asset
+Packages/packages-lock.json
+ProjectSettings/Packages/com.unity.probuilder/Settings.json
